Lesson 6 Sub Category Completed

--- a/Spice/Areas/Admin/Views/Category/Index.cshtml
+++ b/Spice/Areas/Admin/Views/Category/Index.cshtml
@@ -40,7 +40,7 @@
         </table>
         } else
         {
-            <p>No category exists...</p>
+            <p>No Category exists...</p>
         }
     </div>
 </div>
