Lesson 6 Assignments Completed

--- a/Spice/Areas/Admin/Views/SubCategory/Delete.cshtml
+++ b/Spice/Areas/Admin/Views/SubCategory/Delete.cshtml
@@ -1,89 +1,36 @@
-﻿@model Spice.Models.ViewModels.SubCategoryAndCategoryViewModel
-@using Spice.Extensions
-
+﻿@model Spice.Models.SubCategory
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <br />
-<h2 class="text-info">Delete Sub Category</h2>
+<h2 class="text-info">Sub Category Delete</h2>
 <br />
-
-<partial name="_StatusMessage" model="Model.StatusMessage" />
-
-<div class="border backgroundWhite row">
-    <div class="col-8 border-right">
-        <form asp-action="Delete">
-            <input type="hidden" asp-for="SubCategory.CategoryId" />
-            <input type="hidden" asp-for="SubCategory.Id" />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form method="post">
+    <div class="border backgroundWhite">
+        <input type="hidden" asp-for="Id" />
+        <fieldset disabled>
             <div class="form-group row">
-                <div class="col-3">
-                    <label asp-for="SubCategory.CategoryId" class="col-form-label"></label>
+                <div class="col-2">
+                    <label asp-for="Name" class="custom-label"></label>
                 </div>
                 <div class="col-5">
-                    <select id="ddlCategorylist" asp-for="SubCategory.CategoryId" disabled asp-items="Model.CategoryList.ToSelectListItem(Model.SubCategory.CategoryId)" class="form-control"></select>
+                    <input asp-for="Name" class="form-control" />
                 </div>
             </div>
             <div class="form-group row">
-                <div class="col-3">
-                    <label asp-for="SubCategory.Name" class="col-form-label"></label>
+                <div class="col-2">
+                    <label asp-for="Category.Name" class="custom-label"></label>
                 </div>
                 <div class="col-5">
-                    <input asp-for="SubCategory.Name" disabled class="form-control" />
-                </div>
-                <span asp-validation-for="SubCategory.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <div class="col-5 offset-3">
-                    <partial name="_DeleteAndBackToListButton" model="Model.SubCategory.Id" />
+                    <input asp-for="Category.Name" class="form-control" />
                 </div>
             </div>
-        </form>
-    </div>
-    <div class="col-3 offset-1">
-        @if (Model.SubCategoryList.Count() > 0)
-        {
-            <p>Existing Subcategories: </p>
-
-            <div id="SubCategoryList">
-                <ul class="list-group"></ul>
+        </fieldset>
+        <br />
+        <div class="form-group row">
+            <div class="col-5 offset-2">
+                <partial name="_DeleteAndBackToListButton" model="Model.Id" />
             </div>
-        }
+        </div>
     </div>
-
-
-</div>
-
-@section Scripts{
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-    <script>
-        function updateSubCategoryList() {
-            var categorySelected = document.getElementById("ddlCategorylist").value;
-
-            $list = $('#SubCategoryList');
-
-            $.ajax({
-                url: '/Admin/SubCategory/GetSubCategory/' + categorySelected,
-                type: 'GET',
-                dataType: 'text',
-                success: function (data) {
-                    results = JSON.parse(data);
-                    $list.html('');
-                    $list.append('<ul class="list-group">')
-                    for (i in results) {
-                        $list.append('<li class="list-group-item">' + results[i].text + '</li>');
-                    }
-                    $list.append('</ul');
-                }
-            });
-        }
-        $(document).ready(function () {
-            updateSubCategoryList();
-        });
-
-    </script>
-}
-
+</form>
