Lesson 7 Menu Item Complete

--- a/Spice/Views/Shared/_Layout.cshtml
+++ b/Spice/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
                                 <a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="Admin" >Category</a>
                                 <a class="dropdown-item" asp-action="Index" asp-controller="SubCategory" asp-area="Admin" >Sub Category</a>
-                                <a class="dropdown-item">Menu Item</a>
+                                <a class="dropdown-item" asp-action="Index" asp-controller="MenuItem" asp-area="Admin" >Menu Item</a>
                                 <a class="dropdown-item">Coupon</a>
                                 <a class="dropdown-item">Users</a>
                             </div>
@@ -54,6 +54,7 @@
             &copy; 2020 - Spice
         </div>
     </footer>
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=42dkfccrfhe2j82qff7r7wvyp0raulisldfs0qxjt5wy6wsj"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
