--- a/Spice/Areas/Admin/Views/Category/Create.cshtml
+++ b/Spice/Areas/Admin/Views/Category/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Category
-@{ 
+@{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -27,3 +27,7 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
