--- a/Spice/Views/Shared/_Layout.cshtml
+++ b/Spice/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                                 <a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="Admin" >Category</a>
                                 <a class="dropdown-item" asp-action="Index" asp-controller="SubCategory" asp-area="Admin" >Sub Category</a>
                                 <a class="dropdown-item" asp-action="Index" asp-controller="MenuItem" asp-area="Admin" >Menu Item</a>
-                                <a class="dropdown-item">Coupon</a>
+                                <a class="dropdown-item" asp-action="Index" asp-controller="Coupon" asp-area="Admin" >Coupon</a>
                                 <a class="dropdown-item">Users</a>
                             </div>
                         </li>
