--- a/Spice/Views/Shared/_IndividualOrderDetails.cshtml
+++ b/Spice/Views/Shared/_IndividualOrderDetails.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Spice.Models.ViewModels.OrderDetailsViewModel
+@using Spice.Utility
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<form method="post">
+<form asp-action="OrderPickup" asp-controller="Order" asp-route-orderId="@Model.OrderHeader.Id" method="post">
     <div class="container row border ml-1 backgroundWhiteBorder10Padding" style="width:100%">
         <div class="col-lg-8 col-12" style="border-right:1px solid #bbb9b9">
             <br />
@@ -65,7 +66,7 @@
                 <span class="badge badge-secondary badge-pill">@Model.OrderHeader.Id</span>
             </h4>
             <ul class="list-group mb-3">
-                @foreach(var details in Model.OrderDetails)
+                @foreach (var details in Model.OrderDetails)
                 {
                     <li class="list-group-item d-flex justify-content-between">
                         <div>
@@ -75,7 +76,7 @@
                         <span class="text-muted">@(details.Price * details.Count)</span>
                     </li>
                 }
-                @if(Model.OrderHeader.CouponCode != null)
+                @if (Model.OrderHeader.CouponCode != null)
                 {
                     <li class="list-group-item d-flex justify-content-between">
                         <div class="text-success">
@@ -90,7 +91,15 @@
                     <strong class="text-info">$@Model.OrderHeader.OrderTotal</strong>
                 </li>
             </ul>
-            <button type="submit" disabled class="btn btn-info form-control">@Model.OrderHeader.Status</button>
+            @if (Model.OrderHeader.Status.Equals(SD.StatusReady) && (User.IsInRole(SD.ManagerUser) || User.IsInRole(SD.FrontDeskUser)))
+            {
+                <button type="submit" class="btn btn-success form-control"><i class="far fa-thumbs-up"></i> Confirm Pickup</button>
+            }
+            else
+            {
+                <button type="submit" disabled class="btn btn-info form-control">@Model.OrderHeader.Status</button>
+            }
+
         </div>
     </div>
 </form>
