--- a/Spice/Areas/Customer/Views/Order/ManageOrder.cshtml
+++ b/Spice/Areas/Customer/Views/Order/ManageOrder.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="text-info">Manage Order's</h2>
+<h2 class="text-info">Manage Orders</h2>
 <form method="post">
 <br />
     @if(Model.Count > 0)
